@@ -776,7 +776,7 @@ class SpecialRedirectToSpecial extends UnlistedSpecialPage {
 class SpecialMypage extends UnlistedSpecialPage {
 	function __construct() {
 		parent::__construct( 'Mypage' );
-		$this->mAllowedRedirectParams = array( 'action' );
+		$this->mAllowedRedirectParams = array( 'action' , 'preload' , 'editintro' );
 	}
 
 	function getRedirect( $subpage ) {
@@ -796,7 +796,7 @@ class SpecialMypage extends UnlistedSpecialPage {
 class SpecialMytalk extends UnlistedSpecialPage {
 	function __construct() {
 		parent::__construct( 'Mytalk' );
-		$this->mAllowedRedirectParams = array( 'action' );
+		$this->mAllowedRedirectParams = array( 'action' , 'preload' , 'editintro' );
 	}
 
 	function getRedirect( $subpage ) {
@@ -823,5 +823,3 @@ class SpecialMycontributions extends UnlistedSpecialPage {
 		return SpecialPage::getTitleFor( 'Contributions', $wgUser->getName() );
 	}
 }
-
-
